// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main 1`] = `
{
  "account": {
    "number": "x0613",
    "number_formatted": "x0613",
    "type": "card",
  },
  "transaction": {
    "amount": 1500,
    "currency": "INR",
    "date": "Sat Feb 17 2024 06:59:46 GMT+0000 (India Standard Time)",
    "merchant": "NEELKANTH PETROLEUM",
    "type": "debit",
  },
}
`;

exports[`main 2`] = `
{
  "account": {
    "number": "x0613",
    "number_formatted": "x0613",
    "type": "card",
  },
  "transaction": {
    "amount": 2500,
    "currency": "INR",
    "date": "Fri Feb 16 2024 19:07:26 GMT+0000 (India Standard Time)",
    "merchant": "ABC CORP CAPTIVE",
    "type": "debit",
  },
}
`;

exports[`main 3`] = `
{
  "account": {
    "number": "0613",
    "number_formatted": "x0613",
    "type": "card",
  },
  "transaction": {
    "amount": 2500,
    "currency": "INR",
    "date": "Mon Mar 11 2024 21:08:07 GMT+0000 (India Standard Time)",
    "merchant": "PACIFIC ENTERPRISES",
    "type": "debit",
  },
}
`;
